--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div id="root"></div>
+  <footer>
+    Created by
+    <a class="portfolio" href="http://andrewgremmo.com">Andrew Gremmo</a>
+    <a href="http://github.com/andrewjgremmo">
+      <span class="fa fa-github fa-2x"></span>
+    </a>
+  </footer>
 </body>
 <script src="http://127.0.0.1:9060/assets/bundle.js"></script>
 </html>
